Added column for navigating portfolio

--- a/index.html
+++ b/index.html
@@ -71,23 +71,19 @@
                 </div>
 -->
             </div>
-      </div>
+
 <!--        Portfolio-->
         <div id="portfolio">
             <div id="tab-buttons">
                <div class="container">
                     <div class="row">
-                        <div class="col s12">
-                            <a class="waves-effect waves-light btn-large">Websites</a>
-                            <br>
-                            <br>
-                            <br>
-                            <a class="waves-effect waves-light btn-large">Android Application</a>
-                        </div>
+                        <div class="col s4 portfolio-navigator"></div>
+                        <div class="col s9 portfolio-section"></div>
                     </div>
                 </div>
             </div>
         </div>
+     </div>
 <!--        Footer-->
         <footer>
         <div class="container">
