Testing portfolio slide in effect

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
         </div>
         <div id="Horizontal-scroll">
-            <div id="bio">
+            <div id="bio" class="scrolling">
                 <div class="container">
                 <div class="row">
                     <div class="col s12">
@@ -63,17 +63,15 @@
                    </div>
                     </div>
                 </div>
-<!--
                  <div class="container">
                     <div class="row">
-                         <p class="move-right"><i class="fa fa-angle-right fa-3x"></i></p>
+                        <a href="#portfolio" id="#right-button"><i class="fa fa-angle-right fa-3x"></i></a>
                     </div>
                 </div>
--->
             </div>
 
 <!--        Portfolio-->
-        <div id="portfolio">
+        <div id="portfolio" class="scrolling">
             <div id="tab-buttons">
                <div class="container">
                     <div class="row">
