UI for the portolio

--- a/index.html
+++ b/index.html
@@ -74,10 +74,17 @@
         <div id="portfolio" class="scrolling">
             <div id="tab-buttons">
                <div class="container">
-                    <div class="row">
-                        <div class="col s4 portfolio-navigator"></div>
-                        <div class="col s9 portfolio-section"></div>
-                    </div>
+                   <h2 class="port">Portfolio</h2>
+                   <div class="row">
+                        <div class="col s2 portfolio-navigator">
+                             <a class="waves-effect waves-light btn">Websites</a>
+                            <br>
+                            <br>
+                            <br>
+                              <a class="waves-effect waves-light btn">Applications</a>
+                        </div>
+                        <div class=" col s10 portfolio-section"></div>
+                 </div>
                 </div>
             </div>
         </div>
