--- a/index.html
+++ b/index.html
@@ -72,20 +72,7 @@
 
 <!--        Portfolio-->
         <div id="portfolio" class="scrolling">
-            <div id="tab-buttons">
-               <div class="container">
-                   <h2 class="port">Portfolio</h2>
-                   <div class="row">
-                        <div class="col s2 portfolio-navigator">
-                             <a class="waves-effect waves-light btn">Websites</a>
-                            <br>
-                            <br>
-                              <a class="waves-effect waves-light btn">Applications</a>
-                        </div>
-                        <div class=" col s10 portfolio-section"></div>
-                 </div>
-                </div>
-            </div>
+
         </div>
      </div>
 <!--        Footer-->
@@ -111,6 +98,7 @@
     <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
     <script src="http://use.edgefonts.net/architects-daughter:n4:all;bad-script:n4:all.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0-beta.1/jquery-ui.min.js"></script>
     <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
