sorted the buttons for the portfolio section

--- a/index.html
+++ b/index.html
@@ -72,8 +72,17 @@
 
 <!--        Portfolio-->
         <div id="portfolio" class="scrolling">
+                    <div class="container">
+                          <h2 class="center">Portfolio</h2>
+                    <ul class="port-nav">
+                        <li><a href="web-cards" class="center vert">Websites</a></li>
+                        <li><a href="app-cards" class="center vert">Applications</a></li>
+                    </ul>
+                    <div id="web-cards"></div>
+                    <div id="app-cards"></div>
 
-        </div>
+                </div>
+            </div>
      </div>
 <!--        Footer-->
         <footer>
