Added border to the images

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                        <div class="hello_world">
                                <div data-pws-tab="anynameyouwant1" data-pws-tab-name="Websites">
                                    <div class="col s4">
-                                    <img src="images/yolomy.png" height="200px" width="200px">
+                                    <img class="img" src="images/yolomy.png" height="200px" width="200px">
                                    </div>
                           <div class="col s4">
-                                    <img src="images/single.png" height="200px" width="200px">
+                                    <img class="img" src="images/single.png" height="200px" width="200px">
                                    </div>
                                    <div class="col s4">
-                                     <img src="images/fred.png" height="200px" width="200px">
+                                     <img class="img" src="images/fred.png" height="200px" width="200px">
                                    </div>
 
                            </div>
