--- a/index.html
+++ b/index.html
@@ -78,13 +78,29 @@
                        <div class="hello_world">
                                <div data-pws-tab="anynameyouwant1" data-pws-tab-name="Websites">
                                    <div class="col s4">
-                                    <img class="img" src="images/yolomy.png" height="200px" width="200px">
+<!--
+                                       <ul class="grid cs-style-1">
+                                           <li>
+                                               <figure>
+-->
+
+<!--                                                   <figcaption>-->
+<!--                                                   <h3>YOLOMY</h3>-->
+<!--                                                       <span>Simple webstore</span>-->
+
+    <a href="http://yolomy254.bitballoon.com" target="_blank"> <img  src="images/yolomy.png" height="200px" width="100%"></a>
+                                                   </figcaption>
+                                               </figure>
+                                           </li>
+                                       </ul>
+
                                    </div>
-                          <div class="col s4">
-                                    <img class="img" src="images/single.png" height="200px" width="200px">
+                          <div class="col s4 img">
+                              <a href="http://gnome254.bitballoon.com" target="_blank"> <img src="images/single.png" height="200px" width="100%"></a>
                                    </div>
                                    <div class="col s4">
-                                     <img class="img" src="images/fred.png" height="200px" width="200px">
+                                      <a href="http://gnome254.bitballoon.com" target="_blank"
+                                     <img  src="images/gnome.png" height="200px" width="100%">
                                    </div>
 
                            </div>
