Finished with Portfolio section

--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
 
                                    </div>
                           <div class="col s4 img">
-                              <a href="http://gnome254.bitballoon.com" target="_blank"> <img src="images/single.png" height="200px" width="100%"></a>
+                <a href="http://gnome254.bitballoon.com" target="_blank"><img src="images/single.png" height="200px" width="100%"></a>
                                    </div>
-                                   <div class="col s4">
-                                      <a href="http://gnome254.bitballoon.com" target="_blank"
-                                     <img  src="images/gnome.png" height="200px" width="100%">
+                                   <div class="col s4 img">
+                                      <a href="http://gnome254.bitballoon.com" target="_blank"><img  src="images/gnome.png" height="200px" width="100%"></a>
+
                                    </div>
 
                            </div>
                                <div data-pws-tab="anynameyouwant2" data-pws-tab-name="Apps">
-                           <div class="col s4">
-                                   <img src="images/fuji.jpg" height="200px width=200px">
+                           <div class="col s4 img">
+                               <a href="#"><img src="images/mtindo.jpg" height="200px width=200px"></a>
                                    </div>
                            </div>
 
