Fixed landing page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <h1>Martin Mwangi</h1>
                     </div>
                     <div class="front">
-                            <h2>Front End  || <span class="mobile bounceInRight animated">Android Developer</span></h2>
+                            <h2 class="mobile bounceInRight animated">Front End Web || Android Developer</h2>
 
                     </div>
                     <div class="na">
@@ -115,6 +115,10 @@
                 </div>
             </div>
      </div>
+<div id="contact">
+
+
+</div>
 <!--        Footer-->
         <footer>
         <div class="container">
