Structured landing page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
      <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="pwstabs-master/assets/jquery.pwstabs.js"></script>
-
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 
 
     </head>
@@ -35,7 +35,7 @@
                             <h1>Martin Mwangi</h1>
                     </div>
                     <div class="front">
-                            <h2 class="mobile bounceInRight animated">Front End Web || Android Developer</h2>
+                            <h3 class="mobile bounceInRight animated">Front End Web || Android Developer</h3>
 
                     </div>
                     <div class="na">
