Start on contact form

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <h3 class="center">Bio</h3>
                                 Hi,call me Mart, passionate about front-end web development and<br> also very passionate
                     in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
-                    swimming,tennis,<br> and wildlife. <br>
+                    Rock climbing,Reading African Literature<br> and wildlife. <br>
                                 <h4 class="center">Skills</h4>
                                 <div class="chip">HTML</div>
                                  <div class="chip">CSS</div>
@@ -88,11 +88,13 @@
 <!--                                                   <h3>YOLOMY</h3>-->
 <!--                                                       <span>Simple webstore</span>-->
 
-    <a href="http://yolomy254.bitballoon.com" target="_blank"> <img  src="images/yolomy.png" height="200px" width="100%"></a>
+    <a href="http://yolomy254.bitballoon.com" target="_blank"><img  src="images/yolomy.png" height="200px" width="100%"></a>
+<!--
                                                    </figcaption>
                                                </figure>
                                            </li>
                                        </ul>
+-->
 
                                    </div>
                           <div class="col s4 img">
@@ -116,7 +118,22 @@
             </div>
      </div>
 <div id="contact">
+    <div class="container">
+     <div class="row">
+         <form class="col s12">
+             <div class="row">
+                 <div class="input-field col s6">
+                     <input id="full_name" type="text" class="validate">
+                     <label for="first_name">Full name</label>
+                 </div>
+                 <div id="social_media" class="col s6">
 
+
+                 </div>
+             </div>
+         </form>
+    </div>
+    </div>
 
 </div>
 <!--        Footer-->
