--- a/index.html
+++ b/index.html
@@ -122,14 +122,39 @@
      <div class="row">
          <form class="col s12">
              <div class="row">
+                 <h3 class="cont">Contact</h3>
                  <div class="input-field col s6">
+                     <i class="material-icons prefix">account_circle</i>
                      <input id="full_name" type="text" class="validate">
                      <label for="first_name">Full name</label>
                  </div>
-                 <div id="social_media" class="col s6">
 
+                 <div class="row">
+                 <div class="input-field col s6">
+                       <i class="material-icons prefix">email</i>
+                     <input id="email" type="text" class="validate">
+                     <label for="email">Email</label>
+                     </div>
 
                  </div>
+                 <div class="container">
+                     <div class="row">
+                     <div class="input-field col s12">
+                         <i class="material-icons prefix">message</i>
+                          <textarea id="message" class="materialize-textarea"></textarea>
+                         <label for="message">Message</label>
+                         </div>
+                     </div>
+                </div>
+                 <div class="container">
+                 <div class="row">
+                     <div class="col s12">
+                          <a class="waves-effect waves-light btn conts">Send</a>
+                     </div>
+
+                     </div>
+                     </div>
+
              </div>
          </form>
     </div>
