Fixed contact structure

--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
         <div id="landing" class="section-class-name">
                 <div class="container prof">
                             <div class="name bounceInUp animated delay=23sec">
-                            <h1>Martin Mwangi</h1>
+                            <h2>Martin Mwangi</h2>
                     </div>
                     <div class="front">
-                            <h3 class="mobile bounceInRight animated">Front End Web || Android Developer</h3>
-
+                            <h3 class="mobile bounceInRight animated center">Front End Web || Android Developer</h3>
                     </div>
                     <div class="na">
                        <a href="#bio"><i id="hy" class="fa fa-angle-down fa-5x fax hvr-grow"></i></a>
@@ -53,7 +52,7 @@
                                 <h3 class="center">Bio</h3>
                                 Hi,call me Mart, passionate about front-end web development and<br> also very passionate
                     in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
-                    Rock climbing,Reading African Literature<br> and wildlife. <br>
+                    Rock climbing,Reading African Literature and wildlife. <br>
                                 <h4 class="center">Skills</h4>
                                 <div class="chip">HTML</div>
                                  <div class="chip">CSS</div>
