Aligned All arrows

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
     <body>
         <header></header>
            <div id="landing" class="section-class-name">
-                <div class="container">
+                <div class="container" id="profiling">
                     <div class="bounceInUp animated delay=23sec">
-                            <h2 class="center">Martin Mwangi</h2>
+                            <h2 class="center name">Martin Mwangi</h2>
                     </div>
             <div>
             <h3 class="center bounceInRight animated center">Front End Web || Android Developer</h3>
             </div>
-            <div class="down_arrow">
-               <a href="#bio"><i id="hy" class="fa fa-angle-down fa-5x fax hvr-grow"></i></a>
+            <div class="center">
+               <a href="#bio"><i class="fa fa-angle-down fa-5x hvr-grow"></i></a>
             </div>
         </div>
         </div>
@@ -157,7 +157,7 @@
                      </div>
 
              </div>
-<!--             <input type="hidden" name="_next" value="//martmwangi.github.io" />-->
+            <input type="hidden" name="_next" value="//martmwangi.github.io" />
          </form>
     </div>
     </div>
